# Habits_Tracker

./: .env.sample  Dockerfile  Readme.md  docker-compose.yaml  entrypoint.prod.sh  pyproject.toml  покрытие.txt
config/: celery.py  settings.py  urls.py
habit/: admin.py  models.py  pagination.py  permissions.py  seralizers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habit/migrations/: 0001_initial.py  0002_habit_action_habit_owner_habit_place_and_more.py
users/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
